examples/test/testpolicy5658.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5658
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key23: value0
      key22: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value35
          key44: value9
          key19: value10
      podSelector:
        matchLabels:
          key36: value47
